# wildberries-parser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
examples/: 1_products_data_by_ids.py  2_seller_products_short_data.py  3_seller_products_full_data.py
src/: exceptions.py  parser.py  product.py  seller.py
src/wildberries_parser/: __init__.py  exceptions.py  parser.py  product.py  seller.py
