[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildberries_parser"
version = "0.0.1"
authors = [
  { name="Nikita Yakubenko", email="nikitaiakubenko@gmail.com" },
]
description = "Async parser for Wildberries marketplace."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'aiohttp = 3.8.4',
]
